syntax = "proto3";

package webhooks.inboundwebhooksapi.v1;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "buf/validate/validate.proto";

import "common/v1/empty.proto";

service InboundWebhooksAuthService {
    // Auth0
    rpc UserRegistered(UserRegisteredRequest) returns (common.v1.Empty) {
        option (google.api.http) = {
            post: "/v1/webhooks/inbound/auth/user/registered"
            body: "*"
        };
    }
}

// UserRegisteredRequest defines the incoming data for the user created event from
// Auth0 Actions after the user has registered for the first time
message UserRegisteredRequest {
    string username = 1 [(buf.validate.field).string.min_len = 1];
    string email_address = 2 [(buf.validate.field).string.email = true];
    bool email_address_verified = 3;
    string common_id = 4 [(buf.validate.field).string.min_len = 1];
}
